--- a/estilo/midia-Query.css
+++ b/estilo/midia-Query.css
@@ -1,25 +1,22 @@
 
 
-
-
-
 @media screen and (min-width: 768px) and (max-width: 992px) {
 
     body{
-        background-image: linear-gradient(to top,rgb(166, 255, 0), rgb(255, 0, 140));
+        background-image: linear-gradient(to top,#a6ff00, #ff008c);
     }
 
     section#login{
-        width: 80vw;
+        width: 90vw;
     }
     section#login div#imagem{
         float: left;
-        width: 30%;
+        width: 50%;
         height: 100%;
     }
     section#login > div#formulario{
         float: right;
-        width: 70%;
+        width: 50%;
 
     }
     
@@ -27,20 +24,28 @@
 @media screen and (min-width: 992px) {
 
     body{
-        background-image: linear-gradient(to top,rgb(255, 0, 64), rgba(115, 255, 0, 0.664));
+        background-image: linear-gradient(to top,#ff0040, #73ff00a9);
     }
 
     section#login{
         width: 980px;
     }
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
-}
+    }
+    div#formulario > p{
+        font-size: 1.2em;
+    }
+    div#formulario > h1{
+        text-align: center;
+        font-size: 3em;
+    }
+
 
 }
