--- a/estilo/midia-Query.css
+++ b/estilo/midia-Query.css
@@ -1,5 +1,16 @@
+@charset "UTF-8";
 
+/*Todas as demais midia*/
 
+/*Typical Device Brekpoints
+----------------------------
+pequenas telas: até 600px
+celular: de 600px até 768px
+Tablet: 768px até 992px
+Desktop: 992px até 1200px
+Grandes Telas: acima de 1200px
+
+*/
 @media screen and (min-width: 768px) and (max-width: 992px) {/*CONFIGURAÇÃO PARA TABLET*/
 
     body{
